# parallel-programming

./: .gitignore  CMakeLists.txt  dataparallelsim.cpp  hybrid.cpp  mpibnb.cpp  noparallel.cpp  opnmpi.cpp  taskparallel.cpp
data/: graf_32_25.txt  graf_35_15.txt  graf_35_20.txt
output/: datapar_30_20_15_core_10-75056.out  datapar_30_20_15_core_25-75057.out  datapar_30_20_15_core_48-75058.out  datapar_32_25_12_core_10-75087.out  datapar_32_25_12_core_25-75086.out  datapar_32_25_12_core_48-75083.out  datapar_32_25_13_core_10-75094.out  datapar_32_25_13_core_25-75093.out  datapar_32_25_13_core_48-75092.out  hybrid12_n_2-75201.out  hybrid12_n_4-75202.out  hybrid12_n_5-75478.out  hybrid13_n_2-75200.out  hybrid13_n_4-75199.out  hybrid13_n_5-75479.out  hybrid15_n_2-75196.out  hybrid15_n_4-75197.out  hybrid15_n_5-75480.out  seq_30_20_15-74843.out  seq_32_25_12-74813.out  seq_32_25_13-75004.out
